@@ -15,6 +15,8 @@
 - &compile_closure now shares its implementation with &let, &lambda 
   allowing it to function as they do for settings vars, passing $this 
   scope, etc..
+- &join, &flatten functions now accept either a sleep array or generator
+  function.
 
 2.1-beta 15  (25 Apr 07)
 ===========
